--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ profile
 *.moved-aside
 DerivedData
 .idea/
+
+/Sample/CoreTextLabelSample/CoreTextLabelSample.xcworkspace/xcshareddata/CoreTextLabelSample.xccheckout
